test/valid/2DVector/TestVectorAddition.plume
/**
 * A class to test vector addition
 *
 * @author Robin Burgess 36815
 */
class TestVectorAddition extends Object is
  method main : () -> String is
    new Vector(2,4).add(new Vector(-1,1)).toString()
    
  method override toString : () -> String is
	"TestVectorAddition"